--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body style="margin:0px">
+<h2>To move, use the arrow keys</h2>
 <canvas width="616" height="556" id="mazecanvas" style="margin:0px">Can't load the maze game, because your browser doesn't support HTML5.</canvas>
 <script>
 var canvas = document.getElementById("mazecanvas");
